Fix broken style for Language switcher onFocus
Jira: WLP-870

--- a/public/scss/components/_language-switcher.scss
+++ b/public/scss/components/_language-switcher.scss
@@ -10,5 +10,6 @@
 
   &:focus {
     color: black;
+    background: none;
   }
 }
